--- a/syllabus.tex
+++ b/syllabus.tex
@@ -46,6 +46,7 @@ Time & Topic/Activities \\
 9:00 & Start, Introduction \\
 & Course overview, setup \\
  & HTML/CSS, Web Structure  \\
+& HTML basics, CSS Diner, Selector Gadget, R basics (if needed) \\
 12:30--13:30 & Lunch Break \\
 & Static Web Scraping, APIs and Data Formats \\
  & Continue with exercises and project work \\
